# bilateralFiltering

./: .gitignore  CMakeLists.txt  main.py  result.ods
include/bilateral/: Bilateral.hpp  Image.hpp  Image8u1.hpp  Image8u3.hpp  lodepng.hpp
src/: main.cpp
src/bilateral/: Bilateral.cpp  Image8u1.cpp  Image8u3.cpp  lodepng.cpp
